--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>Django Blog</title>
 </head>
 <body>
+    {% include 'blog/nav.html' %}
     {% block content %}
     {% endblock content %}
 </body>
