--- a/blog/templates/blog/nav.html
+++ b/blog/templates/blog/nav.html
@@ -11,9 +11,18 @@
           </li>
         </ul>
         <ul class="navbar-nav">
+          {% if request.user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Sign Out</a>
+                <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Sign Out</a>
             </li>
+          {% else %}
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{% url 'login' %}">Sign In</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{% url 'register' %}">Sign Up</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
