--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,15 +5,15 @@
 
    <div class="row">
       <div class="col-11 col-md-4 mx-auto mt-5">
-         <h1>Sign Up</h1>
+         <h1>Sign In</h1>
          <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn btn-secondary" type="submit">Sign Up</button>
+            <button class="btn btn-secondary" type="submit">Sign In</button>
          </form>
          <div class="pt-3">
-            <small class="text-muted">Already have an account?
-                <a href="{% url 'login' %}" class="ml-2">Sign In</a>
+            <small class="text-muted">Don't have an account?
+                <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
             </small>
          </div>
       </div>
