--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -21,8 +21,35 @@
             <div class="my-3">
                 {{ object.content|truncatewords_html:50|safe }}
             </div>
-            <a href="#" class="btn btn-primary">Read more</a>
+            <a href="#">Read more</a>
         </div>
     </div>
     {% endfor %}
+    <nav>
+        <ul class="pagination">
+            <div class="mx-auto d-flex flex-row mt-5">
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1">&laquo; First</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                    </li>
+                {% endif %}
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                    </a>
+                </li>
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+                    </li>
+                {% endif %}
+            </div>
+        </ul>
+    </nav>
 {% endblock content %}
