--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -17,4 +17,37 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-6 col-12 mx-md-auto mx-3">
+            {% if object.likes.count == 1 %}
+                <p>{{ object.likes.count }} person likes this post</p>
+            {% else %}
+                <p>{{ object.likes.count }} people like this post</p>
+            {% endif %}
+
+            {% if request.user.is_authenticated %}
+                {% if liked_by_user %}
+                    <form method="POST" action="{% url 'like_article' object.id %}">
+                        {% csrf_token %}
+                        <button class="btn btn-outline-primary" type="submit">
+                            Unlike this post
+                        </button>
+                    </form>
+                {% else %}
+                    <form method="POST" action="{% url 'like_article' object.id %}">
+                        {% csrf_token %}
+                        <button class="btn btn-outline-primary" type="submit">
+                            Like this post
+                        </button>
+                    </form>
+                {% endif %}
+            {% else %}
+                <button class="btn btn-outline-primary" disabled>
+                    Login to like this post
+                </button>
+            {% endif %}
+
+        </div>
+    </div>
 {% endblock content %}
