--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -2,13 +2,13 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-4 col-12 mx-5 mt-3">
+        <div class="col-md-4 col-11 mx-md-5 mx-2 mt-md-3 my-3">
             <a class="btn btn-outline-secondary" href="{% url 'index' %}">
                 Back
             </a>
     </div>
     <div class="row">
-        <div class="col-md-6 col-12 mx-md-auto mx-md-auto mb-3 pb-2 mx-3">
+        <div class="col-md-6 col-11 mx-md-auto mx-md-auto mb-3 pb-2 mx-3">
             <h1>{{ object.title }}</h1>
             <p class="text-muted">{{ object.date }}</p>
             <p class="text-muted">Posted by {{ object.author.username }}</p>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6 col-12 mx-md-auto mx-3">
+        <div class="col-md-6 col-11 mx-md-auto mx-3">
             {% if object.likes.count == 1 %}
                 <p>{{ object.likes.count }} person likes this post</p>
             {% else %}
@@ -31,20 +31,20 @@
                     <form method="POST" action="{% url 'like_article' object.id %}">
                         {% csrf_token %}
                         <button class="btn btn-outline-primary" type="submit">
-                            Unlike this post
+                            <ion-icon name="heart-dislike-outline"></ion-icon> Unlike this post
                         </button>
                     </form>
                 {% else %}
                     <form method="POST" action="{% url 'like_article' object.id %}">
                         {% csrf_token %}
                         <button class="btn btn-outline-primary" type="submit">
-                            Like this post
+                            <ion-icon name="heart-outline"></ion-icon> Like this post
                         </button>
                     </form>
                 {% endif %}
             {% else %}
                 <button class="btn btn-outline-primary" disabled>
-                    Login to like this post
+                    <ion-icon name="heart-outline"></ion-icon> Login to like this post
                 </button>
             {% endif %}
 
