--- a/blog/templates/blog/featured.html
+++ b/blog/templates/blog/featured.html
@@ -3,8 +3,8 @@
 {% block content %}
     <div class="row">
         <div class="col-md-6 col-12 mx-md-auto mx-3 mt-5 mb-5">
-            <h1 class="fw-bolder">Django  Blog</h1>
-            <h5 class="text-muted">A blog about Django and Python</h5>
+            <h1 class="fw-bolder">Featured Posts</h1>
+            <h5 class="text-muted">Take a look at the featured posts!</h5>
         </div>
     </div>
     {% for object in object_list %}
