--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -12,6 +12,13 @@
             <h1>{{ object.title }}</h1>
             <p class="text-muted">{{ object.date }}</p>
             <p class="text-muted">Posted by {{ object.author.username }}</p>
+
+            {% if request.user.username == object.author.username %}
+                <div class="pb-3">
+                    <a href="{% url 'delete_article' object.pk %}">Delete this post</a>
+                </div>
+            {% endif %}
+
             <div>
                 {{ object.content|safe }}
             </div>
